tests-system/rbt-applicable-types/output
checks B {
       ^ rbt-applicable-types/foo.rsl:8: error: unknown symbol B
Processed 2 models, 0 checks and 0 requirement files and found 1 error
